--- a/workflow/charts/controller/templates/controller-ingress-rule-http-80.yaml
+++ b/workflow/charts/controller/templates/controller-ingress-rule-http-80.yaml
@@ -1,5 +1,5 @@
 {{ if .Values.global.experimental_native_ingress }}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   namespace: "{{ .Release.Namespace }}"
@@ -15,7 +15,10 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: deis-controller
-          servicePort: 80
+          service:
+            name: deis-controller
+            port:
+              number: 80
 {{- end }}
