add a hardcoded ingress
this is obviously incorrect

--- a/workflow/charts/controller/templates/controller-ingress-rule-http-80.yaml
+++ b/workflow/charts/controller/templates/controller-ingress-rule-http-80.yaml
@@ -10,6 +10,7 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
+  ingressClassName: traefik
   rules:
   - host: deis.{{ .Values.platform_domain }}
     http:
