add ingressClassName as a value ingress_class

--- a/workflow/charts/controller/templates/controller-ingress-rule-http-80.yaml
+++ b/workflow/charts/controller/templates/controller-ingress-rule-http-80.yaml
@@ -10,7 +10,9 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  ingressClassName: traefik
+{{- if .Values.ingress_class }}
+  ingressClassName: {{ .Values.ingress_class }}
+{{- end }}
   rules:
   - host: deis.{{ .Values.platform_domain }}
     http:
