increment the chart version

--- a/workflow/Chart.yaml
+++ b/workflow/Chart.yaml
@@ -3,4 +3,4 @@ home: https://github.com/teamhephy/workflow
 maintainers:
 - email: team@teamhephy.com
 name: workflow
-version: v2.23.0
+version: v2.24.0-beta1
