the released controller should be

--- a/workflow/charts/controller/Chart.yaml
+++ b/workflow/charts/controller/Chart.yaml
@@ -1,6 +1,7 @@
+apiVersion: v2
 description: Hephy Workflow Controller (API).
 home: https://github.com/teamhephy/controller
 maintainers:
 - email: team@teamhephy.com
 name: controller
-version: v2.22.0
+version: v2.23.0
