--- a/.github/workflows/publish-chart.yaml
+++ b/.github/workflows/publish-chart.yaml
@@ -6,7 +6,7 @@ on:
       - '*'
 
 env:
-  OCI_REPO: "oci://ghcr.io/kingdonb/hephy-workflow-beta/"
+  OCI_REPO: "kingdonb/hephy-workflow-beta"
 
 jobs:
   publish:
@@ -38,7 +38,7 @@ jobs:
         uses: appany/helm-oci-chart-releaser@v0.4.0
         with:
           name: workflow
-          repository: appany
+          repository: ${OCI_REPO}
           tag: ${{ steps.prep.outputs.BUILD_ID }}
           path: workflow
           registry: ghcr.io
