blindly copy from 2.23.9
there can be errors in here still, this is for 2.24.0-beta.4

Signed-off-by: Kingdon Barrett <kingdon@weave.works>

--- a/workflow/charts/controller/Chart.yaml
+++ b/workflow/charts/controller/Chart.yaml
@@ -1,7 +1,7 @@
-apiVersion: v2
+apiVersion: v1
 description: Hephy Workflow Controller (API).
 home: https://github.com/teamhephy/controller
 maintainers:
 - email: team@teamhephy.com
 name: controller
-version: v2.23.0
+version: 2.22.1
