--- a/workflow/charts/minio/Chart.yaml
+++ b/workflow/charts/minio/Chart.yaml
@@ -1,6 +1,7 @@
+apiVersion: v1
 description: Minio Object Storage in Kubernetes, used by Hephy Workflow.
 home: https://github.com/teamhephy/minio
 maintainers:
 - email: team@teamhephy.com
 name: minio
-version: v2.4.5
+version: 2.4.6
