--- a/workflow/charts/slugbuilder/Chart.yaml
+++ b/workflow/charts/slugbuilder/Chart.yaml
@@ -1,6 +1,8 @@
-description: Buildpack application builder for Hephy Workflow.
+apiVersion: v1
+description: Buildpack application builder for Deis Workflow.
 home: https://github.com/teamhephy/slugbuilder
 maintainers:
-- email: team@teamhephy.com
+- email: engineering@deis.com
+  name: Deis Team
 name: slugbuilder
-version: v2.8.0
+version: 2.8.1
