--- a/workflow/templates/objectstorage-secret.yaml
+++ b/workflow/templates/objectstorage-secret.yaml
@@ -12,6 +12,7 @@ data: {{ if eq .Values.global.storage "gcs"}}
   builder-bucket: {{.Values.gcs.builder_bucket | b64enc }}
   registry-bucket: {{.Values.gcs.registry_bucket | b64enc }}
   database-bucket: {{.Values.gcs.database_bucket | b64enc }}{{ else if eq .Values.global.storage "azure"}}
+  azure-storage-conn-string: {{ .Values.azure.storage_conn_string | b64enc }}
   accountname: {{.Values.azure.accountname | b64enc }}
   accountkey: {{ .Values.azure.accountkey | b64enc }}
   builder-container: {{ .Values.azure.builder_container | b64enc }}
