--- a/workflow/charts/builder/Chart.yaml
+++ b/workflow/charts/builder/Chart.yaml
@@ -1,6 +1,7 @@
-description: Git server and application builder for Hephy Workflow.
+apiVersion: v1
+description: Git server and application builder for Deis Workflow.
 home: https://github.com/teamhephy/builder
 maintainers:
 - email: team@teamhephy.com
 name: builder
-version: v2.13.7
+version: 2.13.9
