--- a/workflow/charts/builder/templates/builder-service.yaml
+++ b/workflow/charts/builder/templates/builder-service.yaml
@@ -4,6 +4,10 @@ metadata:
   name: deis-builder
   labels:
     heritage: deis
+  annotations:
+{{- if .Values.global.use_native_ingress }}
+    external-dns.alpha.kubernetes.io/hostname: deis-builder.{{ .Values.platform_domain }}
+{{- end }}
 spec:
   ports:
     - name: ssh
@@ -11,6 +15,6 @@ spec:
       targetPort: 2223
   selector:
     app: deis-builder
-{{ if .Values.global.experimental_native_ingress }}
+{{ if .Values.global.use_native_ingress }}
   type: "LoadBalancer"
 {{ end }}
