--- a/workflow/charts/controller/templates/controller-ingress-rule-http-80.yaml
+++ b/workflow/charts/controller/templates/controller-ingress-rule-http-80.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.global.experimental_native_ingress }}
+{{ if .Values.global.native_ingress }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
