--- a/workflow/charts/logger/Chart.yaml
+++ b/workflow/charts/logger/Chart.yaml
@@ -1,6 +1,8 @@
-description: In-memory log buffer used by Hephy Workflow.
+apiVersion: v1
+description: In-memory log buffer used by Deis Workflow.
 home: https://github.com/teamhephy/logger
 maintainers:
-- email: team@teamhephy.com
+- email: engineering@deis.com
+  name: Deis Team
 name: logger
-version: v2.5.1
+version: 2.5.2
