--- a/workflow/charts/monitor/Chart.yaml
+++ b/workflow/charts/monitor/Chart.yaml
@@ -1,6 +1,7 @@
+apiVersion: v1
 description: Monitoring for Hephy Workflow.
 home: https://github.com/teamhephy/monitor
 maintainers:
 - email: team@teamhephy.com
 name: monitor
-version: v2.11.2
+version: 2.11.5
