--- a/workflow/charts/monitor/charts/telegraf/Chart.yaml
+++ b/workflow/charts/monitor/charts/telegraf/Chart.yaml
@@ -1,6 +1,7 @@
-description: Monitoring for Hephy Workflow.
+apiVersion: v1
+description: Monitoring for Deis Workflow.
 home: https://github.com/teamhephy/monitor/tree/master/telegraf
 maintainers:
 - email: team@teamhephy.com
 name: telegraf
-version: v2.11.2
+version: 2.11.4
