--- a/workflow/charts/nsqd/values.yaml
+++ b/workflow/charts/nsqd/values.yaml
@@ -1,6 +1,6 @@
 org: "hephy"
 pull_policy: "IfNotPresent"
-docker_tag: "v2.5.1"
+docker_tag: v2.5.1
 # limits_cpu: "100m"
 # limits_memory: "50Mi"
 replicas: 1
