--- a/workflow/charts/registry-proxy/Chart.yaml
+++ b/workflow/charts/registry-proxy/Chart.yaml
@@ -1,6 +1,7 @@
+apiVersion: v1
 description: Hephy Workflow Registry Proxy.
 home: https://github.com/teamhephy/registry-proxy
 maintainers:
 - email: team@teamhephy.com
 name: registry-proxy
-version: v1.5.1
+version: 1.5.2
