--- a/workflow/charts/router/Chart.yaml
+++ b/workflow/charts/router/Chart.yaml
@@ -1,6 +1,7 @@
+apiVersion: v1
 description: Edge router for Hephy Workflow.
 home: https://github.com/teamhephy/router
 maintainers:
 - email: team@teamhephy.com
 name: router
-version: v2.19.0
+version: 2.19.2
