--- a/workflow/charts/workflow-manager/values.yaml
+++ b/workflow/charts/workflow-manager/values.yaml
@@ -1,7 +1,7 @@
 org: "hephy"
 pull_policy: "IfNotPresent"
 docker_tag: v2.6.2
-versions_api_url: https://versions.teamhephy.info
-doctor_api_url: https://doctor.teamhephy.info
+versions_api_url: https://versions-staging.deis.com
+doctor_api_url: https://doctor-staging.deis.com
 # limits_cpu: "100m"
 # limits_memory: "50Mi"
