--- a/workflow/charts/controller/Chart.yaml
+++ b/workflow/charts/controller/Chart.yaml
@@ -1,7 +1,8 @@
-apiVersion: v1
+apiVersion: v2
 description: Hephy Workflow Controller (API).
 home: https://github.com/teamhephy/controller
 maintainers:
 - email: team@teamhephy.com
+  name: Team Hephy
 name: controller
-version: 2.22.1
+version: 2.22.3
