--- a/workflow/charts/controller/templates/controller-clusterrole.yaml
+++ b/workflow/charts/controller/templates/controller-clusterrole.yaml
@@ -50,7 +50,7 @@ rules:
 - apiGroups: ["extensions", "autoscaling"]
   resources: ["horizontalpodautoscalers"]
   verbs: ["get", "list", "create", "update", "delete"]
-{{ if .Values.global.native_ingress }}
+{{ if .Values.global.use_native_ingress }}
 - apiGroups: ["networking.k8s.io"]
   resources: ["ingresses"]
   verbs: ["get", "list", "watch", "create", "update", "delete"]
