--- a/workflow/charts/database/Chart.yaml
+++ b/workflow/charts/database/Chart.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: v2
 description: A PostgreSQL database used by Hephy Workflow.
 home: https://github.com/teamhephy/postgres
 keywords:
@@ -6,5 +6,6 @@ keywords:
 - postgres
 maintainers:
 - email: team@teamhephy.com
+  name: Team Hephy
 name: database
-version: 2.7.7
+version: 2.7.8
