--- a/workflow/charts/dockerbuilder/Chart.yaml
+++ b/workflow/charts/dockerbuilder/Chart.yaml
@@ -1,9 +1,9 @@
-apiVersion: v1
-description: Deis dockerbuilder builds your app from a Dockerfile inside a Kubernetes
-  pod, used by Deis Workflow.
-home: https://github.com/deisthree/dockerbuilder
+apiVersion: v2
+description: Hephy dockerbuilder builds your app from a Dockerfile inside a Kubernetes
+  pod, used by Hephy Workflow.
+home: https://github.com/teamhephy/dockerbuilder
 maintainers:
-- email: engineering@deis.com
-  name: Deis Team
+- email: team@teamhephy.com
+  name: Team Hephy
 name: dockerbuilder
-version: 2.8.4
+version: 2.8.5
