--- a/workflow/charts/logger/Chart.yaml
+++ b/workflow/charts/logger/Chart.yaml
@@ -1,8 +1,8 @@
-apiVersion: v1
-description: In-memory log buffer used by Deis Workflow.
+apiVersion: v2
+description: In-memory log buffer used by Hephy Workflow.
 home: https://github.com/teamhephy/logger
 maintainers:
-- email: engineering@deis.com
-  name: Deis Team
+- email: team@teamhephy.com
+  name: Team Hephy
 name: logger
-version: 2.5.2
+version: 2.5.3
