--- a/workflow/charts/minio/Chart.yaml
+++ b/workflow/charts/minio/Chart.yaml
@@ -1,7 +1,8 @@
-apiVersion: v1
+apiVersion: v2
 description: Minio Object Storage in Kubernetes, used by Hephy Workflow.
 home: https://github.com/teamhephy/minio
 maintainers:
 - email: team@teamhephy.com
+  name: Team Hephy
 name: minio
-version: 2.4.6
+version: 2.4.7
