--- a/workflow/charts/monitor/Chart.yaml
+++ b/workflow/charts/monitor/Chart.yaml
@@ -1,7 +1,8 @@
-apiVersion: v1
+apiVersion: v2
 description: Monitoring for Hephy Workflow.
 home: https://github.com/teamhephy/monitor
 maintainers:
 - email: team@teamhephy.com
+  name: Team Hephy
 name: monitor
-version: 2.11.5
+version: 2.11.6
