--- a/workflow/charts/monitor/charts/grafana/Chart.yaml
+++ b/workflow/charts/monitor/charts/grafana/Chart.yaml
@@ -1,7 +1,8 @@
-apiVersion: v1
+apiVersion: v2
 description: Monitoring for Hephy Workflow.
 home: https://github.com/teamhephy/monitor/tree/master/grafana
 maintainers:
 - email: team@teamhephy.com
+  name: Team Hephy
 name: grafana
-version: 2.11.4
+version: 2.11.6
