--- a/workflow/charts/monitor/charts/telegraf/Chart.yaml
+++ b/workflow/charts/monitor/charts/telegraf/Chart.yaml
@@ -1,7 +1,8 @@
-apiVersion: v1
-description: Monitoring for Deis Workflow.
+apiVersion: v2
+description: Monitoring for Hephy Workflow.
 home: https://github.com/teamhephy/monitor/tree/master/telegraf
 maintainers:
 - email: team@teamhephy.com
+  name: Team Hephy
 name: telegraf
-version: 2.11.4
+version: 2.11.6
