--- a/workflow/charts/redis/Chart.yaml
+++ b/workflow/charts/redis/Chart.yaml
@@ -1,7 +1,8 @@
-apiVersion: v1
+apiVersion: v2
 description: A Redis database for use inside a Kubernetes cluster.
 home: https://github.com/teamhephy/redis
 maintainers:
 - email: team@teamhephy.com
+  name: Team Hephy
 name: redis
-version: 2.4.4
+version: 2.4.5
