--- a/workflow/charts/registry-proxy/Chart.yaml
+++ b/workflow/charts/registry-proxy/Chart.yaml
@@ -1,7 +1,8 @@
-apiVersion: v1
+apiVersion: v2
 description: Hephy Workflow Registry Proxy.
 home: https://github.com/teamhephy/registry-proxy
 maintainers:
 - email: team@teamhephy.com
+  name: Team Hephy
 name: registry-proxy
-version: 1.5.2
+version: 1.5.3
