--- a/workflow/charts/registry/Chart.yaml
+++ b/workflow/charts/registry/Chart.yaml
@@ -1,7 +1,8 @@
-apiVersion: v1
+apiVersion: v2
 description: Docker registry for Hephy Workflow.
 home: https://github.com/teamhephy/registry
 maintainers:
 - email: team@teamhephy.com
+  name: Team Hephy
 name: registry
-version: 2.6.2
+version: 2.6.3
