--- a/workflow/charts/router/Chart.yaml
+++ b/workflow/charts/router/Chart.yaml
@@ -1,7 +1,8 @@
-apiVersion: v1
+apiVersion: v2
 description: Edge router for Hephy Workflow.
 home: https://github.com/teamhephy/router
 maintainers:
 - email: team@teamhephy.com
+  name: Team Hephy
 name: router
-version: 2.19.2
+version: 2.19.4
