--- a/workflow/charts/slugbuilder/Chart.yaml
+++ b/workflow/charts/slugbuilder/Chart.yaml
@@ -1,8 +1,8 @@
-apiVersion: v1
-description: Buildpack application builder for Deis Workflow.
+apiVersion: v2
+description: Buildpack application builder for Hephy Workflow.
 home: https://github.com/teamhephy/slugbuilder
 maintainers:
-- email: engineering@deis.com
-  name: Deis Team
+- email: team@teamhephy.com
+  name: Team Hephy
 name: slugbuilder
-version: 2.8.1
+version: 2.8.2
