--- a/workflow/charts/workflow-manager/Chart.yaml
+++ b/workflow/charts/workflow-manager/Chart.yaml
@@ -1,8 +1,8 @@
-apiVersion: v1
-description: 'Deis Workflow Manager: Cluster First Aid'
+apiVersion: v2
+description: 'Hephy Workflow Manager: Cluster First Aid'
 home: https://github.com/teamhephy/workflow-manager
 maintainers:
-- email: engineering@deis.com
-  name: Deis Team
+- email: team@teamhephy.com
+  name: Team Hephy
 name: workflow-manager
-version: 2.6.3
+version: 2.6.4
