--- a/workflow/Chart.yaml
+++ b/workflow/Chart.yaml
@@ -5,7 +5,7 @@ dependencies:
   version: 2.13.10
 - name: slugbuilder
   repository: oci://ghcr.io/kingdonb/hephy-workflow-beta
-  version: 2.8.2
+  version: 2.8.3
 - name: dockerbuilder
   repository: oci://ghcr.io/kingdonb/hephy-workflow-beta
   version: 2.8.5
@@ -57,4 +57,4 @@ maintainers:
 - email: team@teamhephy.com
   name: Team Hephy
 name: workflow
-version: 2.23.12
+version: 2.24.0-beta.7
